Sat Feb 21 12:06:11 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* gtk/gtkentry.c (gtk_entry_set_text): Added a test for passing a
	NULL text pointer.

Sat Feb 21 14:49:17 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkobject.h:
	* gtk/gtkobject.c: gtk_object_query_args takes an additional pointer
 	now which if supplied will point to an array holding the sequential
	argument ids.

	* gtk/gtktree.c: fix emission of selection_changed signal, supplied
	by Bolliet Jerome.

	* gtk/gtktreeitem.c: inline the plus and minus pixmaps, supplied by
	Bolliet Jerome.

	* gtk/gtknotebook.c: do a resize when a page is removed and don't
	refer to the removed page on the switch signal, supplied by Lars Hamann
	and Stefan Jeske.

	* gtk/gtktoolbar.h:
	* gtk/gtktoolbar.c:
 	gtk_toolbar_append_item, gtk_toolbar_prepend_item,
 	gtk_toolbar_insert_item, gtk_toolbar_append_widget,
	gtk_toolbar_prepend_widget, gtk_toolbar_insert_widget: take an additional
 	gchar *tooltip_private_text as argument to fully support the underlying
	call to gtk_tooltip_set_tip.

Fri Feb 20 16:44:57 GMT 1998 Tony Gale <gale@gimp.org>

	* docs/gtkfaq.sgml: added to list of GTK apps, added permissions notice
		new GDK section - needs some Q&A's added

Fri Feb 20 06:40:00 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtktipsquery.h: 
	* gtk/gtktipsquery.c:
 	New widget GtkTipsQuery for letting the user query tooltips of widgets.

	* gtk/testgtk.c: add example for GtkTipsQuery.

	* gtk/gtk.h: include gtk/gtktipsquery.h.

	* gtk/gtklabel.c: enable default constructing.
	

Thu Feb 19 18:53:51 1998  Larry Ewing  <lewing@discord.isc.tamu.edu>

	* removed g_warnings from the common XShm failure cases in gdkimage.c

1998-02-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkcombo.c (gtk_combo_entry_key_press): Added M-p and M-n
	key equivalents for up and down keys.  Just for us Emacs weenies :-)

Thu Feb 19 12:18:24 1998  Owen Taylor  <owt1@cornell.edu>
